# quotes

./: .earthignore  .gitignore  ARCHITECTURE.md  Dockerfile  Earthfile  README.rst  http-client.env.json  mise.toml  pyproject.toml  test-integration.sh
.config/mise/: config.toml
.config/mise/tasks/: update-python-version.py
.github/: dependabot.yaml
.github/workflows/: cleanup.yaml  main.yaml
backend/: .prospector.yaml  Earthfile  config.py  http-client.env.json  main.py  mise.toml  pyproject.toml  test_main.http
backend/api/: deps.py
backend/api/v1/: __init__.py  quotes.py
backend/ibidem/quotes/: __main__.py  deps.py  logger.py  web.py
backend/ibidem/quotes/api/: schemas.py
backend/quotes/: config.py  deps.py  main.py  web.py
backend/quotes/api/: deps.py  probes.py  schemas.py
backend/quotes/api/v1/: quotes.py
backend/templates/: base.html.j2  quote.html.j2
deploy/: application.yaml.j2  configmap.yaml
frontend/: Earthfile  package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
ibidem/quotes/: deps.py  main.py
ibidem/quotes/api/v1/: quotes.py
misc/coding-team/flatten-backend/: 001-move-files-delete-redundant.md  002-merge-earthfiles.md  003-update-backend-references.md  004-fix-mise-directives.md
misc/coding-team/integration-test-script/: 001-create-integration-test-script.md
misc/coding-team/move-quotes-to-ibidem/: 001-move-package-and-update-imports.md  002-update-build-and-config-files.md
