[project]
authors = [
    { name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" },
]
license = { text = "MIT" }
requires-python = "==3.13.*"
dependencies = [
    "fastapi<1.0.0,>=0.115.2",
    "uvicorn<1.0.0,>=0.34.0",
    "pydantic<3.0.0,>=2.9.2",
    "pydantic-settings<3.0.0,>=2.6.0",
    "fiaas-logging<1.0.0,>=0.1.1",
    "jinja2>=3.1.6",
]
name = "quotes"
description = "Quotes API and site"
readme = "README.rst"
dynamic = [
    "version",
]

[build-system]
requires = ["hatchling==1.28.0", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["ibidem"]

[tool.hatch.build.targets.wheel]
include = ["ibidem"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 120
