[tool.poetry]
name = "quotes-backend"
version = "0.1.0"
description = ""
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
license = "MIT"
packages = [{include = "quotes"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
fiaas-logging = "^0.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24"
prospector = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
