[project]
authors = [
    { name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" },
]
license = { text = "MIT" }
requires-python = "~=3.13"
dependencies = [
    "fastapi<1.0.0,>=0.115.2",
    "uvicorn<1.0.0,>=0.34.0",
    "pydantic<3.0.0,>=2.9.2",
    "pydantic-settings<3.0.0,>=2.6.0",
    "fiaas-logging<1.0.0,>=0.1.1",
    "jinja2>=3.1.6",
]
name = "quotes-backend"
version = "0.1.0"
description = ""

[tool.black]
line-length = 120
target-version = ["py313"]

[dependency-groups]
dev = [
    "black==25.1.0",
    "prospector==1.17.1",
]
